convert more java to kotlin